--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
         
         <!--==================== SWIPER CSS ====================-->
-        <link rel="stylesheet" href="./packages/css/swiper-bundle.min.css">
+        <link rel="stylesheet" href="./swiper-bundle.min.css">
         
         <!--==================== CSS ====================-->
-        <link rel="stylesheet" href="./packages/css/styles.css">
+        <link rel="stylesheet" href="./styles.css">
 
         <title>Rinku_Portfolio</title>
     </head>
