--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <span class="section__subtitle">My Introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="packages/images/IMG_0313.jpg" alt="" class="about__img">
+                    <img src="IMG_0313.jpg" alt="" class="about__img">
                     <div class="about__data">
                         <p class="about__description">
                             I am a passionate front-end developer skilled in creating dynamic and responsive web interfaces.
